--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="#">WebStudio</a>
+        <a href="#">Студія</a>
+        <a href="#">Портфоліо</a>
+        <a href="#">Контакти</a>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </header>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button>Замовити послугу</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <img src="./images/1.png" alt="Руки" />
+        <img src="./images/2.png" alt="Телефон" />
+        <img src="./images/3.png" alt="Планшет" />
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <img src="./images/1.jpg" alt="Руки" />
+        <h3>Ігор Дем'яненко</h3>
+        <p>Product Designer</p>
+        <img src="./images/2.jpg" alt="Телефон" />
+        <h3>Ольга Рєпіна</h3>
+        <p>Frontend Developer</p>
+        <img src="./images/3.jpg" alt="Планшет" />
+        <h3>Микола Тарасов</h3>
+        <p>Marketing</p>
+        <img src="./images/3.jpg" alt="Планшет" />
+        <h3>Михайло Єрмаков</h3>
+        <p>UI Designer</p>
+      </section>
+    </main>
+    <footer>
+      <a href="#">WebStudio</a>
+      <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </footer>
+  </body>
 </html>
