--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
   <body>
     <header>
       <nav>
-        <a href="#">WebStudio</a>
-        <a href="#">Студія</a>
-        <a href="#">Портфоліо</a>
-        <a href="#">Контакт и</a>
+        <a href="./index.html"><span>Web</span>Studio</a>
+        <ul>
+          <li>
+            <a href="./index.html">Студія</a>
+          </li>
+          <li>
+            <a href="./index.html">Портфоліо</a>
+          </li>
+          <li>
+            <a href="./index.html">Контакти</a>
+          </li>
+        </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
       <section>
@@ -44,29 +58,51 @@
       </section>
       <section>
         <h2>Чим ми займаємося</h2>
-        <img src="./images/1.png" alt="Руки" />
-        <img src="./images/2.png" alt="Телефон" />
-        <img src="./images/3.png" alt="Планшет" />
+        <ul>
+          <li>
+            <img src="./images/1.png" alt="Руки" width="370" height="294" />
+          </li>
+          <li>
+            <img src="./images/2.png" alt="Телефон" width="370" height="294" />
+          </li>
+          <li>
+            <img src="./images/3.png" alt="Планшет" width="370" height="294" />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
-        <img src="./images/1.jpg" alt="Руки" />
-        <h3>Ігор Дем'яненко</h3>
-        <p>Product Designer</p>
-        <img src="./images/2.jpg" alt="Телефон" />
-        <h3>Ольга Рєпіна</h3>
-        <p>Frontend Developer</p>
-        <img src="./images/3.jpg" alt="Планшет" />
-        <h3>Микола Тарасов</h3>
-        <p>Marketing</p>
-        <img src="./images/3.jpg" alt="Планшет" />
-        <h3>Михайло Єрмаков</h3>
-        <p>UI Designer</p>
+        <ul>
+          <li>
+            <img src="./images/1.jpg" alt="Руки" width="270" height="260" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/2.jpg" alt="Телефон" width="270" height="260" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/3.jpg" alt="Планшет" width="270" height="260" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/3.jpg" alt="Планшет" width="270" height="260" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
       <a href="#">WebStudio</a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <address>
+        <a href="https://goo.gl/maps/q7XF8GkswiTuNywT8" target="_blank" rel="noopener noreferrer">
+          Київ, пр-т Лесі Українки, 26
+        </a>
+      </address>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
