--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button>Замовити послугу</button>
+        <button>Замовити поcлугу</button>
       </section>
       <section>
         <ul>
