--- a/index.html
+++ b/index.html
@@ -98,19 +98,25 @@
     </main>
     <footer>
       <a href="#">WebStudio</a>
-        <ul>
-          <li>
-           <address>
-           <a href="https://goo.gl/maps/q7XF8GkswiTuNywT8" target="_blank" rel="noopener noreferrer">
-           Київ, пр-т Лесі Українки, 26
-           </a>
-           </address>
-          <li>
-           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>      
+      <ul>
+        <li>
+          <address>
+            <a
+              href="https://goo.gl/maps/q7XF8GkswiTuNywT8"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Київ, пр-т Лесі Українки, 26
+            </a>
+          </address>
+        </li>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
           <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
